--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -1,24 +1,9 @@
 name: Build all core packages
 
 on:
-  pull_request:
-    paths:
-      - '.github/workflows/build.yml'
-      - '.github/workflows/packages.yml'
-      - 'config/**'
-      - 'include/**'
-      - 'package/**'
-      - 'target/linux/generic/**'
-      - 'toolchain/**'
   push:
-    paths:
-      - '.github/workflows/build.yml'
-      - '.github/workflows/packages.yml'
-      - 'config/**'
-      - 'include/**'
-      - 'package/**'
-      - 'target/linux/generic/**'
-      - 'toolchain/**'
+    tags:
+      - '*'
 
 permissions:
   contents: read
